force-app/main/default/objects/Insight_Data_Storage__c/Insight_Data_Storage__c.object-meta.xml
<CustomObject>
    <label>Insight Data Storage</label>
    <nameField>
        <displayFormat>IDS-{000000}</displayFormat>
        <label>Insight Data Storage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insight Data Storage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>