force-app/main/default/objects/Insight_Data_Storage__c/fields/Avg_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Avg_Duration_Minutes__c</fullName>
    <label>Avg Duration (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>