force-app/main/default/objects/Insight_Data_Storage__c/fields/Failed__c.field-meta.xml
<CustomField>
    <fullName>Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Failed</label>
    <type>Checkbox</type>
</CustomField>