force-app/main/default/objects/Insight_Data_Storage__c/fields/Members_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Members_Deactivated__c</fullName>
    <label>Members Deactivated</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>