force-app/main/default/objects/Insight_Data_Storage__c/fields/Number_Courses__c.field-meta.xml
<CustomField>
    <fullName>Number_Courses__c</fullName>
    <label>Number Courses</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>