force-app/main/default/objects/Insight_Data_Storage__c/fields/OE_Code__c.field-meta.xml
<CustomField>
    <fullName>OE_Code__c</fullName>
    <externalId>true</externalId>
    <label>OE Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>